# GreyCore

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  database.hpp  dbfile.hpp  dim.hpp  flatmap.hpp
include/datatypes/: dtstring.hpp
include/greycore/: config.hpp  database.hpp  dbfile.hpp  dim.hpp  typedescriptor.hpp
include/greycore/datatypes/: dttuple.hpp
include/greycore/wrapper/: flatmap.hpp
include/wrapper/: graph.hpp
src/: config.hpp  dbfile.cpp  dbfile.hpp  dim.hpp  main.cpp  management.cpp  management.hpp
src/datatypes/: dtstring.hpp
src/libgreycore/: database.cpp  dbfile.cpp
src/libgreycore/wrapper/: graph.cpp
src/utils/: gcadmin.cpp
